--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -25,7 +25,7 @@
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
-    padding: 1em 1em;
+    padding: 0 1em;
     background-color:#2c2c2c;
 }
 
