--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -1,19 +1,21 @@
 .footer{
     background-color: #191919;
     color: #FFFFFF;
-    padding: 2rem;
+    padding: 1rem;
     text-align: center;
 }
 
 .socialMedia{
     display: flex;
     font-size: 1.5rem;
+    margin: 0;
     justify-content: center;
+    align-items: center;
     list-style-type: none;
 }
 
 .socialMedia li{
-    margin: 1rem;
+    margin-right: 2rem;
     cursor: pointer;
 }
 
@@ -22,7 +24,7 @@
 }
 
 .text{
-    margin-top: 1rem;
+    margin: 0;
 }
 
 .text span{
