--- a/src/pages/Register/Register.module.css
+++ b/src/pages/Register/Register.module.css
@@ -1,5 +1,5 @@
 .registerContainer{
-    margin-top: 4em;
-    padding: 1em;
+    margin-top: 6em;
+    margin-bottom: 2em;
     text-align: center;
 }
