escurecendo a cor da mensagem de sucesso

--- a/src/index.css
+++ b/src/index.css
@@ -92,7 +92,7 @@ input:focus{
   margin: 1em auto;
   background-color: #7dcd76;
   font-weight: bold;
-  color: #26d612;
+  color: #1c9b0e;
   border-radius: 25px;
   border: 1px solid #26d612;
   padding: 0.2em 0.5em;  
