--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -20,7 +20,7 @@
     margin-bottom: .5em;
     font-size: 1.2rem;
     font-weight: 500;
-    color: #5b5b5b;
+    color: #4a4a4a;
 }
 
 .containerHome a {
