--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -4,6 +4,10 @@
     text-align: center;
 }
 
+.containerLogin h1{
+    text-decoration: underline #FFD00D;
+}
+
 .containerLogin h2{
     margin: 0;
     color: #ffffff;
