add media query a pg company

--- a/src/pages/Company/Company.module.css
+++ b/src/pages/Company/Company.module.css
@@ -10,3 +10,9 @@
     color: #ffffff;
     text-decoration: underline #FFD00D;
 }
+
+@media screen and (max-width: 800px){
+    .companyContainer{
+        margin-top: 4em;
+    }
+}
