ajuste no css do h1 da pg welcome

--- a/src/pages/Welcome/Welcome.module.css
+++ b/src/pages/Welcome/Welcome.module.css
@@ -45,17 +45,15 @@
 
 @media screen and (max-width: 800px){
     .welcomeContainer{
-        margin-top: 80px;
+        margin-top: 2em;
     }
 
     .welcomeCard{
         text-align: center;
     }
-}
-  
-@media screen and (max-width: 800px){
-    .welcomeCard img{
-        width: 50%;
+
+    .welcomeCard h1{
+        margin: 0;
     }
 
     .linksContainer{
@@ -64,3 +62,4 @@
         padding: 0;
     }
 }
+  
