--- a/src/components/Cards.module.css
+++ b/src/components/Cards.module.css
@@ -1,9 +1,8 @@
 .projectCard{
-    width: 100%;
-    padding: 1em;
+    width: 90%;
+    padding: 0em .5em 1.5em .5em;
     background-color: #171717;
     border-radius: 10px;
-    margin: 0.5%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -11,14 +10,14 @@
 
 .tittleCard{
     width: 100%;
-    height: 120px;
+    height: 100px;
 }
 
 .projectCard h4{
     background-color: #FFD00D;
     color: #171717;
     border-radius: 10px;
-    padding: 0.5em 1em;
+    padding: 0.5em;
     margin-bottom: 1em;
     text-align: center;
     font-size: 1.2em;
