--- a/src/pages/Projects/Projects.module.css
+++ b/src/pages/Projects/Projects.module.css
@@ -5,8 +5,6 @@
 }
 
 .containerCards{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-column-gap: 5px;
-    grid-row-gap: 1em;
+    display: flex;
+    flex-wrap: wrap;
 }
