--- a/src/pages/Projects/Projects.module.css
+++ b/src/pages/Projects/Projects.module.css
@@ -4,6 +4,10 @@
     padding: 0 2em;
 }
 
+.containerProject h1{
+    text-decoration: underline #FFD00D;
+}
+
 .containerCards{
     display: flex;
     flex-wrap: wrap;
