--- a/src/pages/Projects/Projects.module.css
+++ b/src/pages/Projects/Projects.module.css
@@ -12,3 +12,12 @@
     display: flex;
     flex-wrap: wrap;
 }
+
+.noPosts{
+    text-align: center;
+}
+
+.noPosts p{
+    color: #4a4a4a;
+    margin-bottom: 2em;
+}
