--- a/src/pages/Projects/Projects.module.css
+++ b/src/pages/Projects/Projects.module.css
@@ -4,8 +4,19 @@
     padding: 0 2em;
 }
 
-.containerProject h1{
+.headerProject{
+    display: flex;
+    justify-content: space-between;
+}
+
+.headerProject h1{
     text-decoration: underline #FFD00D;
+}
+
+.headerProject a{
+    position: absolute;
+    right: 0;
+    margin-right: 2em;
 }
 
 .containerCards{
