criando area de criar serviço

--- a/src/pages/ProjectDetail/ProjectDetail.module.css
+++ b/src/pages/ProjectDetail/ProjectDetail.module.css
@@ -9,6 +9,6 @@
     margin-bottom: 0;
 }
 
-.containerProjectDetail button{
-    margin: 1em 0;
+.serviceFormContainer h2{
+    margin-bottom: 0;
 }
