criando o handlesubmitservice e o states do formSerivce

--- a/src/pages/ProjectDetail/ProjectDetail.module.css
+++ b/src/pages/ProjectDetail/ProjectDetail.module.css
@@ -29,6 +29,10 @@ hr{
     border: 2px solid #191919;
 }
 
+.containerProjectDetail textarea{
+    border: 2px solid #191919;
+}
+
 .containerProjectDetail span{
     color: #191919;
 }
