--- a/src/components/CardsServices.module.css
+++ b/src/components/CardsServices.module.css
@@ -1,4 +1,4 @@
-.projectCard{
+.serviceCard{
     width: 20em;
     padding: 0em .5em 1.5em .5em;
     margin: 0em auto 1em auto;
@@ -9,12 +9,18 @@
     justify-content: space-between;
 }
 
+.infoService{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
 .tittleCard{
     width: 100%;
     height: 100px;
 }
 
-.projectCard h4{
+.infoService h4{
     background-color: #FFD00D;
     color: #171717;
     border-radius: 10px;
@@ -27,17 +33,20 @@
     text-transform: uppercase;
 }
 
-.projectCard p{
-    margin-bottom: 1.5em;
+.infoService p{
+    margin-bottom: 0em;
     color: #f9f9f9;
 }
 
-.projectCard p span{
+.infoService span{
     font-weight: 700;
+    color: #f9f9f9;
 }
 
 .cardActions{
     margin-top: 2em;
+    position: block;
+    bottom: 0;
     display: flex;
     justify-content: space-around;
 }
