arrumando o css da tag span na pg projectdetail

--- a/src/pages/ProjectDetail/ProjectDetail.module.css
+++ b/src/pages/ProjectDetail/ProjectDetail.module.css
@@ -49,6 +49,10 @@ hr{
     min-height: 30vh;
 }
 
+.serviceContainer span{
+    color: #FFD00D;
+}
+
 .containerServiceCards{
     display: flex;
     flex-wrap: wrap;
