deixando as cores das categorais mais marcadas

--- a/src/components/Cards.module.css
+++ b/src/components/Cards.module.css
@@ -58,11 +58,11 @@
 }
 
 .categoryText .design{
-    background-color: #b84bdf;
+    background-color: #6f1d8d;
 }
 
 .categoryText .desenvolvimento{
-    background-color: #df4bc1;
+    background-color: #ff54dd;
 }
 
 .categoryText .manutenção{
