--- a/src/pages/ProjectDetail/ProjectDetail.module.css
+++ b/src/pages/ProjectDetail/ProjectDetail.module.css
@@ -10,7 +10,7 @@ hr{
 
 .containerProjectDetail h1{
     text-decoration: underline #FFD00D;
-    margin-bottom: 0;
+    margin: 0;
 }
 
 .containerProjectDetail form{
