--- a/src/pages/ServiceDetail/ServiceDetail.module.css
+++ b/src/pages/ServiceDetail/ServiceDetail.module.css
@@ -6,7 +6,7 @@
 
 .containerServiceDetail h1{
     text-decoration: underline #FFD00D;
-    margin-bottom: 0;
+    margin: 0;
 }
 
 .containerServiceDetail form{
