aumentando a fonte do sectiontextos na tag p

--- a/src/pages/Contact/Contact.module.css
+++ b/src/pages/Contact/Contact.module.css
@@ -34,8 +34,9 @@
 }
 
 .sectionTexts p{
-    color: #7b7b7b;
+    color: #9a9a9a;
     margin-bottom: 1em;
+    font-size: 1.2em;
 }
 
 .sectionTexts h3{
