ajustando o css da pg project para mobile

--- a/src/pages/ProjectDetail/ProjectDetail.module.css
+++ b/src/pages/ProjectDetail/ProjectDetail.module.css
@@ -64,3 +64,13 @@ hr{
     margin-top: 0;
     color: #9c0808;
 }
+
+@media screen and (max-width: 800px){
+    .containerProjectDetail{
+        margin-top: 5em;
+    }
+    
+    .containerProjectDetail h1{
+        font-size: 1.5em;
+    }
+}
