add mediaquery a pg home para telas +1440

--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -34,3 +34,13 @@
         padding: 0em 1em;
     }
 }
+
+@media screen and (min-width: 1440px){
+    .containerHome{
+        margin-top: 6em;
+    }
+
+    .imgHome{
+        width: 20em;
+    }
+}
