add mediaquery + 1440px na pg login e register

--- a/src/pages/Register/Register.module.css
+++ b/src/pages/Register/Register.module.css
@@ -20,3 +20,9 @@
         margin-top: 5em;
     }
 }
+
+@media screen and (min-width: 1440px){
+    .registerContainer{
+        margin-top: 10em;
+    }
+}
