--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -32,3 +32,9 @@
 .recoverPassword:hover{
     font-size: 0.9em;
 }
+
+@media screen and (min-width: 1440px){
+    .containerLogin{
+        margin-top: 10em;
+    }
+}
