--- a/src/pages/Company/Company.module.css
+++ b/src/pages/Company/Company.module.css
@@ -16,3 +16,10 @@
         margin-top: 4em;
     }
 }
+
+@media screen and (min-width: 1440px){
+    .companyContainer{
+        margin-top: 10em;
+    }
+}
+
