--- a/src/pages/ProjectDetail/ProjectDetail.module.css
+++ b/src/pages/ProjectDetail/ProjectDetail.module.css
@@ -74,3 +74,9 @@ hr{
         font-size: 1.5em;
     }
 }
+
+@media screen and (min-width: 1440px){
+    .containerProjectDetail{
+        margin-top: 10em;
+    }
+}
