add mediaquery +1440px na pg project

--- a/src/pages/Projects/Projects.module.css
+++ b/src/pages/Projects/Projects.module.css
@@ -43,3 +43,9 @@
         display: none;
     }
 }
+
+@media screen and (min-width: 1440px){
+    .containerProject{
+        margin-top: 9em;
+    }
+}
