add mediaquery +1440px na pg servicedetail

--- a/src/pages/ServiceDetail/ServiceDetail.module.css
+++ b/src/pages/ServiceDetail/ServiceDetail.module.css
@@ -40,3 +40,10 @@
     }
     
 }
+
+@media screen and (min-width: 1440px){
+    .containerServiceDetail{
+        margin-top: 10em;
+    }
+    
+}
