--- a/src/pages/Welcome/Welcome.module.css
+++ b/src/pages/Welcome/Welcome.module.css
@@ -63,4 +63,11 @@
         padding: 0;
     }
 }
+
+@media screen and (min-width: 1440px){
+    .welcomeContainer{
+        margin-top: 9em;
+    }
+}
+  
   
