ajustando o botão sair da navbar

--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -72,6 +72,11 @@
     .list a {
         font-size: 1.5em;  
     }
+
+    .list button{
+        margin-top: 0.2em;
+        font-size: 1.5em;
+    }
   
 }
 
